# dlai-hf-course

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: L1_NLP_tasks_with_a_simple_interface.ipynb  L2_Image_captioning_app.ipynb  L2_Image_captioning_app.ipynb:Zone.Identifier  L3_Image_generation_app.ipynb  L3_Image_generation_app.ipynb:Zone.Identifier  L4_Describe_and_generate_game.ipynb  L4_Describe_and_generate_game.ipynb:Zone.Identifier  L5_Chat_with_any_LLM.ipynb  L5_Chat_with_any_LLM.ipynb:Zone.Identifier
