[tool.poetry]
name = "dlai-hf-course"
version = "0.0.1"
description = "A Project with learning resource on DLAI HUGGINGFACE Course"
authors = ["Amjad Raza"]
license = "MIT"
readme = "README.md"
packages = [{include = "dlai-hf-course"}]


[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.31.0"
gradio = "^3.39.0"
jupyterlab = "^4.0.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
